<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nsantiago.tmdbkotlinchallenge.viewmodels.MovieDetailViewModel" />
        <variable
            name="fragment"
            type="com.nsantiago.tmdbkotlinchallenge.ui.MovieDetailFragment" />

        <import type="com.nsantiago.tmdbkotlinchallenge.common.BindingConverters" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                app:contentScrim="@color/primary"
                app:expandedTitleTextAppearance="@style/Widget.AppCompat.Toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.movieDetail.backdropUrl}"
                    app:layout_collapseMode="parallax" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sheet_text_scrim_height_bottom"
                    android:layout_alignBottom="@+id/image"
                    android:layout_gravity="bottom"
                    android:background="#CB242228" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/Widget.AppCompat.Toolbar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="183dp"
                    android:layout_height="275dp"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.movieDetail.posterUrl}"
                    app:layout_constraintDimensionRatio="h,2:3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/poster_placeholder" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:paddingTop="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/movie_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/movie_poster"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="4"
                        style="@style/DetailLabel"
                        android:layout_marginBottom="20dp"
                        android:textStyle="italic"
                        android:text="@{viewModel.movieDetail.originalTitle}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>


                    <TextView
                        android:id="@+id/language"
                        style="@style/DetailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.movieDetail.originalLanguage}"
                        android:textAllCaps="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/original_title"  />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rating_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/language">

                        <TextView
                            android:id="@+id/rating_label"
                            style="@style/DetailLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/rating_ic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_baseline_star_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rating_label" />

                        <TextView
                            android:id="@+id/vote_average"
                            style="@style/DetailBody"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{@string/vote_average(viewModel.movieDetail.voteAverage)}"
                            app:layout_constraintStart_toEndOf="@+id/rating_ic"
                            app:layout_constraintTop_toBottomOf="@id/rating_label" />

                        <TextView
                            android:id="@+id/vote_count"
                            style="@style/DetailBody"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{BindingConverters.intToString(viewModel.movieDetail.voteCount)}"
                            app:layout_constraintStart_toEndOf="@+id/rating_ic"
                            app:layout_constraintTop_toBottomOf="@id/vote_average" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <TextView
                        android:id="@+id/popularity_label"
                        style="@style/DetailLabel"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popularity_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/language" />

                    <TextView
                        android:id="@+id/popularity"
                        style="@style/DetailBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{BindingConverters.floatToIntString(viewModel.movieDetail.popularity)}"
                        app:layout_constraintBottom_toBottomOf="@+id/rating_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/popularity_label" />
                    <TextView
                        android:id="@+id/status"
                        style="@style/DetailBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/release_date(viewModel.movieDetail.status, viewModel.movieDetail.releaseDate)}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/genres_label" />
                    <TextView
                        android:id="@+id/genres_label"
                        style="@style/DetailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genres_label"
                        app:layout_constraintBottom_toTopOf="@+id/genres"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/genres"
                        style="@style/DetailBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{BindingConverters.stringListToString(viewModel.movieDetail.genres)}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/overview_label"
                    style="@style/DetailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/overview_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/DetailBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@{viewModel.movieDetail.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/overview_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/network_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:visibility="gone">
            <ImageView
                android:id="@+id/network_error_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_network_error"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/network_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_network_error"
                style="@style/DetailLabel"
                app:layout_constraintTop_toBottomOf="@+id/network_error_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:padding="30dp"/>
            <Button
                android:id="@+id/network_error_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_error_back_btn"
                android:onClick="@{()->fragment.onNavigateBack()}"
                app:layout_constraintTop_toBottomOf="@+id/network_error_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/network_error_btn_retry"/>
            <Button
                android:id="@+id/network_error_btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_error_retry_btn"
                android:onClick="@{()->viewModel.reloadMovieDetail()}"
                app:layout_constraintTop_toBottomOf="@+id/network_error_text"
                app:layout_constraintStart_toEndOf="@+id/network_error_btn_back"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>